# ribbit-solver

./: Makefile  README.md  example_puzzle.txt  main.py  pyproject.toml  ribbit_solver.py  test_main.py
.claude/commands/: solve.md
